[BUG] ajout d'un gap entre les card de l'accueil

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,10 @@ nav a {
 
 /* Section NEWS */
 
+#actualite .news-card {
+    margin-bottom: 1rem;
+}
+
 .news-card {
     border-radius: 12px;
     background-color: var(--clr--white);
